--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <meta property="og:title" content="ICMAI - The Institute of Cost Accountants of India" />
     <meta property="og:description" content="Professional Cost Accounting Education, Training, and Development since 1959" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+   
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ICMAI_Official" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    
+    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
   </head>
 
   <body>
